# Tantalos

./: .gitignore  .taurignore  Cargo.toml  Dioxus.toml  README.md  Trunk.toml  build.rs  deny.toml
.cargo/: config.toml
.config/: spellcheck.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
desktop/: Cargo.toml
desktop/src/: main.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: icons.rs  instances.rs  main.rs  peeps.rs  routes.rs  settings.rs
frontend/src/settings/: add_account.rs  mod.rs
old-src/: dash.rs  fonts.rs  lib.rs  main.rs
res/: slint-viewer.sh  styles.css
res/css/: hiq.min.css  main.css  sanitize.css  view-transitions.css
res/i18n/: en-US.ftl  en-Zyyy.ftl  fi-FI.ftl
res/lang/: compile-translations.sh  extract.sh  missing.sh  new.sh  tantalos.pot  update.sh
res/lang/en/: tantalos.po
res/lang/fi/: tantalos.po
res/ui/: globals.slint  icon.slint  index.slint  nav.slint  theme.slint
src/: about.rs  add_account.rs  app.rs  build.rs  dash.rs  fonts.rs  lib.rs  main.rs  settings.rs  slint.rs
src/components/: about.rs  footer.rs  icon.rs  lang.rs  layout.rs  mod.rs  navbar.rs
src/views/: accounts.rs  dashboard.rs  home.rs  info.rs  mod.rs  settings.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: main.rs
