[workspace]
resolver = "2"
members = [
    "cli",
    "desktop"
]

[workspace.dependencies]

[workspace.dependencies.onlivfe_wrapper]
path = "../core/onlivfe_wrapper"
#git = "https://github.com/onlivfe/core.git"
default-features = false

# Logging
[workspace.dependencies.tracing]
version = "0.1.41"
features = ["attributes", "log"]
[workspace.dependencies.tracing-subscriber]
version = "0.3.19"
features = ["time", "parking_lot", "env-filter", "fmt", "json", "local-time"]
