[package]
name = "tantalos"
version = "0.1.0"
edition = "2021"

[features]
default = ["freya/devtools"]

[dependencies]
onlivfe_wrapper = { workspace = true }


# Translations seem broken with dioxius 0.6/freya-0.3rc
#freya = { version = "0.2.2"}
#freya = { version = "0.3.0-rc.0"}
freya = { git = "https://github.com/marc2332/freya" }
#dioxus = { version = "0.6", features = ["macro", "hooks"], default-features = false }

# Newest seem broken with dioxius 0.6/freya-0.3rc
#dioxus-i18n = { version = "0.2.5" }
dioxus-i18n = { version = "0.3.0" }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }

[package.metadata.packager]
before-packaging-command = "cargo build --release --no-default-features"
product-name = "Tantalos"
description = "An onlivfe GUI to interact with social VR platforms"
homepage = "https://onlivfe.com"
publisher = "com.munally"
authors = [
	"The onlivfe contributors"
]
identifier = "com.munally.tantalos"
resources = ["../res/icons/icon.png"]
icons = ["../res/icons/icon.png"]
formats = ["pacman"]
