[package]
name = "vr-peeps-ui"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
onlivfe = { workspace = true, default-features = false }
leptos = { version = "0.7.0-beta5", features = ["csr"], default-features = false }
leptos_router = { version = "0.7.0-beta5", features = [], default-features = false }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["tauri"] }
web-sys = { version = "0.3.70", features = ["HtmlSelectElement", "HtmlFormElement"] }
serde = { workspace = true }

console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
