[package]
name = "app"
description = "Onlivfe's app for social VR peeps, built with rust"
default-run = "app"
version = "0.0.0"
publish = false
authors = ["ljoonal"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://onlivfe.com"
repository = "https://github.com/onlivfe/app_rs"
categories = ["games"]
keywords = ["onlivfe", "social_vr", "social_platform", "social_network", "social"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.14", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.21", features = [] }

onlivfe = { workspace = true, default-features = false }
onlivfe_wrapper = { workspace = true, default-features = false }
onlivfe_cache_store  = { workspace = true, default-features = false }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
